collapse button fixed

--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,9 @@ h1, h2, h3, h4, h5, span, p, a
 
 .center-align
 {
-    text-align: center !important;
+    margin:0 auto; 
+    width: auto;
+    text-align:center;
 }
 
 .vspace
@@ -93,26 +95,15 @@ h1, h2, h3, h4, h5, span, p, a
 /* NAVIGATION *************************************/
 /**************************************************/
 
-#navbar
-{
-    background: #3f3f3f !important;
-    font-family: 'Source Sans Pro', sans-serif !important;
-}
-
 .navbar-padding
 {
-    padding: 2em 1em !important;
-}
-
-.navbar-nav.navbar-center {
-    position: absolute;
-    left: 50%;
-    transform: translatex(-50%);
+    padding: 1.5em 0.5em !important;
 }
 
 .navbar a 
 {
     font-family: 'Source Sans Pro', sans-serif !important;
+    
 }
 
 /**************************************************/
